@@ -1,3 +1,9 @@
+2003-10-02  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclTrace.c: Corrected comingling of introspection results of
+	[trace info command] and [trace info execution].  [Bug 807243]
+	Thanks to Mark Saye.
+
 2003-10-01  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/Makefile: fixed redo prebinding bug when DESTDIR="".
